@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.1.10
 
+	- Fixed selection bug in Fl_Int_Input (STR #2292)
 	- Fixed character set conversion functions (STR #2268)
 	- Fixed image lib configure and fltk-config issues by backporting
 	  the image lib and zlib configure code from FLTK 1.3 (STR #2203)
